--- a/rapporter/Better Thesis/Conclusion.tex
+++ b/rapporter/Better Thesis/Conclusion.tex
@@ -1,6 +1,12 @@
 \chapter{Conclusion}\label{cha:conclusion}
 
-This master thesis has examined the possibilities to develop an algorithm which could detect facial marks and separate them into permanent and non-permanent. The result from the experiments shows that the detector can initially find the facial mark with high recall but loses its precision after the post-processing of the facial mark candidates. This master thesis has show that the colors of the permanent and non-permanent marks are more important than the structure when separating the two classes. The classifier demonstrate a good result which is promising.   
+The need to develop reliable face recognition algorithms has increased dramatically the last decades thanks to ever increasing developments in computer vision. Therefore, this master thesis has examined the possibilities to develop an algorithm which could detect facial marks and separate them into permanent and non-permanent marks. The separation was done with a classifier and the focus has been to evaluate which features are suitable for the classifier.  
 
-There are many areas where method used to improve the algorithm described in this master thesis. One should first of all improve the elimination of false detections. This would make the algorithm more reliable to be used as a tool for forensics.  
+The algorithm consists of a preprocessing step where facial images have been normalized booth geometrically and photometrically. Then the skin mark candidates are found with the help of the radial symmetry in the image. Finally the false candidates are eliminated depending on their size, shape and hair content. The classification of the detected facial marks is done with a SVM classifier with a set of descriptive features. 
+
+To evaluate the algorithm, the precision and recall was calculated for different parameters in radial symmetry method. These performance values were also used to see the performance of the different elimination methods. For the classifier, the accuracy from the confusion matrix was used to evaluate the performance of different combinations of features. The feature examined was RGB, HSV, HOG, LBP and color names. 
+
+The results show that there exists a big problem with false detections of facial marks since the precision of the algorithm is very low. One can also say that the hair elimination process is increasing the precision the best. The classifier performs well and the result suggests that color based features are more important than structural features. No complementary properties could be found between the color based features and structural features.
+
+There are many areas within this master theses which would be interesting to investigate further. One should first of all improve the precision of the detector by examining the elimination methods further or even try new methods. When it comes to the classifier, it would be interesting to look if the normalization of the feature affects the accuracy and how. The future work within facial recognition is endless and the use of automatic face recognition program will undoubtedly increase. 
 
