--- a/rapporter/Better Thesis/Discussion.tex
+++ b/rapporter/Better Thesis/Discussion.tex
@@ -6,17 +6,22 @@ This section will discuss the results from the algorithm and the methods used to
 
 As seen, the detector has problem with false detections which is a huge problem. The precision is not very good, not even over 10\%, due to the many false detections. The precision does not increase faster than the decline of the recall with an increasing $h_{frs}$-value. This indicates that there are margins for improvement when it comes to the candidate detector.
 
-Vorder Bruegge et al. \cite{automatic_detector_2015} got a precision of 71\% which is a lot better then the result from this master thesis. Taeg Sang Cho et al.\cite{reliable_mole} got a recall value of 84.7\% which is also better than the results form this master thesis. One thing that should be noticed is that Vorder Bruegge et al. has been focusing to finding RPPVSM which is a wide definition of skin marks. This master thesis has tried to find the skin marks which has been of interest to the forensics at NFC. This could be one of the reasons to the large amount of false detections. The detector is probably detecting RPPVSM which has not been deemed of interest.     
+Vorder Bruegge et al. \cite{automatic_detector_2015} got a precision of 71\% which is a lot better than the result from this master thesis. Taeg Sang Cho et al.\cite{reliable_mole} got a recall value of 84.7\% which is also better than the results from this master thesis. One thing that should be noticed is that Vorder Bruegge et al. has been focusing to finding RPPVSM which is a wide definition of skin marks. This master thesis has tried to find the skin marks which has been of interest to the forensics at NFC. This could be one of the reasons to the large amount of false detections. The detector is probably detecting RPPVSM which has not been deemed of interest.     
 
-When looking at the The elimination method used, they do improve the precision and recall values but maybe not to the extant which one was hoping for. There can be a great improvement in trying to find optimal values for $h_{hair}$ threshold value since this has not be investigated. 
+When looking at the elimination method used, they do improve the precision and recall values but maybe not to the extant which one was hoping for. There can be a great improvement in trying to find a optimal value for the $h_{hair}$ threshold since this has not be investigated. Maybe there are better methods to bee used to eliminate the false detections than the ones used in this master thesis.  
 
-The classifier offers some indication to the importance of colors when it comes to separating permanent and non-permanent marks. The structural features alone perform poorly and does not improve the accuracy when they are combined with color based features. The researcher using classifiers for face recognition show the result of matching images using skin marks. This means that no result has been found how well a classifier can separate permanent and non-permanent skin marks.
+The classifier offers some indication to the importance of colors when it comes to separating permanent and non-permanent marks. The structural features alone perform all right but they do not improve the accuracy when they are combined with color based features. Simply put, they do not show complementary properties. 
+
+The reason why the color based features perform better is probably due to the small differences in structure between permanent and non-permanent skin marks, see \cref{fig:per_vs_non}. One can see a slight difference in color, the permanent marks tend to be browner while the non-permanent marks tend to be more red.  
+
+It is hard to compare the performance of the classifier with other research since researchers using classifiers for face recognition mostly use the classifier to find matching set of skin marks. For example, a classifier is used to determine if a set of skin marks matches other set of skin marks. Also, Taeg Sang Cho et al. used classifiers to find moles but they only tried to separate moles and everything else. This should be easier than separating permanent and non-permanent skin marks. In other words, this master thesis has looked at a more difficult problem which is why it is hard to compare the results from this master thesis with other research. 
+
 
 \section{Method}
 
 There are a lot to say about the methods used in the algorithm. The major problem with the algorithm is the elimination of candidates. They eliminate candidates which are true facial marks. The hair elimination part does improve the precision the best. The blob detector on the other hand is hardly improving the precision at the cost of recall loss. This means that the blob-detector is not contributing to the algorithm in a positive way.
 
-Tim et Lee al. describes their algorithm well except when they are explaining how to calculate the hair mask for each color channel. It is not clear what the maximum from refers to. The algorithm in this work used the maximal pixel value between the different structuring elements. 
+Tim Lee et al. describes their algorithm well except when they are explaining how to calculate the hair mask for each color channel. It is not clear what the maximum from refers to. The algorithm in this work used the maximal pixel value between the different structuring elements. 
 
 The mark detector used in the algorithm was good at indicating the potential facial marks but the simple thresholding method to pin point them out was not optimal. It kept the pixels larger than a certain percent of the maximal value in the FRS image. This resulted in many unnecessary candidates which of course contributed to the high false detection rate. 
 
@@ -35,4 +40,4 @@ It would be interesting to examine how different types of classifier would affec
 
 As with all applications which can be used for surveillance of people, the integrity is at stake. Facial recognition algorithms using facial marks can be misused for malicious intent. They can also help the legal system to catch and convict criminals which is desirable outcome of this paper. 
 
-When it comes to the facial images, they are taken from a open source database which should only be used for academical research. There are no personal information attached to the images which makes them as anonymous as possible without corrupting the images.    
+When it comes to the facial images, they are taken from an open source database which should only be used for academical research. There is no personal information attached to the images which makes them as anonymous as possible without corrupting the images.    
