--- a/rapporter/Better Thesis/engelsk-sammanfattning.tex
+++ b/rapporter/Better Thesis/engelsk-sammanfattning.tex
@@ -1,1 +1,1 @@
-When forensic examiners try to identify the perpetrator of a felony, they use individual facial marks when comparing the suspect with the perpetrator. Facial marks are often used for identification and they are nowadays  found manually. To speed up this process, it is desired to detect interesting facial marks automatically. This master thesis describes a method to automatically detect and separate permanent and non-permanent marks. It uses a fast radial symmetry algorithm as a core element in the mark detector and a support vector machine for the classifier of the marks. The results shows that the facial mark detector has a good recall value while the precision is poor. One can also conclude that the color of facial marks are more relevant than the structure when it comes to sorting them into permanent and non-permanent marks.
+When forensic examiners try to identify the perpetrator of a felony, they use individual facial marks when comparing the suspect with the perpetrator. Facial marks are often used for identification and they are nowadays found manually. To speed up this process, it is desired to detect interesting facial marks automatically. This master thesis describes a method to automatically detect and separate permanent and non-permanent marks. It uses a fast radial symmetry algorithm as a core element in the mark detector. After candidate skin mark extraction, the false detections are removed depending on there size, shape and number of hair pixels. The classification of the skin marks are done with a support vector machine and the different features are examined. The results shows that the facial mark detector has a good recall value while the precision is poor. The elimination methods of false detection was analysed as well as the different features for the classifier. One can conclude that the color of facial marks is more relevant than the structure when classifying them into permanent and non-permanent marks.
