--- a/rapporter/Better Thesis/main.tex
+++ b/rapporter/Better Thesis/main.tex
@@ -22,6 +22,7 @@
 \usepackage{placeins}
 \usepackage{amsmath}
 \usepackage{adjustbox}
+\usepackage{chngcntr}
 
 
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
