--- a/rapporter/Better Thesis/myrefs.bib
+++ b/rapporter/Better Thesis/myrefs.bib
@@ -1,10 +1,10 @@
 @inproceedings{forensic_identification,
-title={Forensic identification of people from images and video},
-author={Spaun, Nicole A and Bruegge, Richard W Vorder},
-booktitle={Biometrics: Theory, Applications and Systems, 2008. BTAS 2008. 2nd IEEE International Conference on},
-pages={1--4},
-year={2008},
-organization={IEEE}
+  title={Forensic identification of people from images and video},
+  author={Spaun, Nicole A and Bruegge, Richard W Vorder},
+  booktitle={Biometrics: Theory, Applications and Systems, 2008. BTAS 2008. 2nd IEEE International Conference on},
+  pages={1--4},
+  year={2008},
+  organization={IEEE}
 }
 
 @article{automatic_detector_2015,
@@ -19,49 +19,34 @@ organization={IEEE}
 	%note     = "",
 }
 
+
 @inproceedings{statistic_RPPVSM,
-	author    = "Nurhudatiana A., Matinpour K., Siu-Yeung Cho, Craft N.",
-	title     = "Fundamental statistics of relatively permanent pigmented or vascular skin marks for criminal and victim identification",
-	booktitle   = "Biometrics (IJCB)s",
-	%editor   = "",
-	%volume   = "",
-	%number   = "",
-	%series   = "",
-	pages    = "1-6",
-	%address  = "",
-	year      = "2011",
-	month    = "October",
-	%publisher= "",
-	%note     = "",
+title={Fundamental statistics of relatively permanent pigmented or vascular skin marks for criminal and victim identification},
+author={Nurhudatiana, Arfika and Kong, Adams Wai-Kin and Matinpour, Keyan and Cho, Siu-Yeung and Craft, Noah},
+booktitle={Biometrics (IJCB), 2011 International Joint Conference on},
+pages={1--6},
+year={2011},
+organization={IEEE}
 }
 
 @inproceedings{face_segmentation_skin,
-	author    = "Partha Das, Anirban Sarkar, Soumyadeep Halder, Debasish Kundu, Sudipta Ghosh,
-	Sauvik Das Gupta",
-	title     = "A novel approach towards detecting faces and gender using skin segmentation and template matching",
-	booktitle   = "Signal Processing and Integrated Networks (SPIN)",
-	%editor   = "",
-	%volume   = "",
-	%number   = "",
-	%series   = "",
-	%pages    = "",
-	%address  = "",
-	year      = "2015",
-	%month    = "",
-	%publisher= "",
-	%note     = "",
+  title={A novel approach towards detecting faces and gender using skin segmentation and template matching},
+  author={Das, Partha and Sarkar, Anirban and Halder, Soumyadeep and Kundu, Debasish and Ghosh, Sudipta and Gupta, Sauvik Das},
+  booktitle={Signal Processing and Integrated Networks (SPIN), 2015 2nd International Conference on},
+  pages={431--436},
+  year={2015},
+  organization={IEEE}
 }
 
 @article{11_colours,
-	author    = "Joost van de Weijer, Cordelia Schmid, Jakob Verbeek, Diane Larlus",
-	title     = "Learning Color Names for Real-World Applications",
-	journal   = "IEEE Transactions on Image Processing",
-	volume   = "18",
-	number   = "7",
-	pages    = "1512-1523",
-	year      = "2009",
-	month    = "July",
-	%note     = "",
+  title={Learning color names for real-world applications},
+  author={Van De Weijer, Joost and Schmid, Cordelia and Verbeek, Jakob and Larlus, Diane},
+  journal={IEEE Transactions on Image Processing},
+  volume={18},
+  number={7},
+  pages={1512--1523},
+  year={2009},
+  publisher={IEEE}
 }
 
 @inproceedings{landmarks_SVM,
@@ -297,10 +282,12 @@ organization={IEEE}
 	organization={IEEE}
 }
 
-@article{svm_guide,
+@inproceedings{svm_guide,
 	title={A practical guide to support vector classification},
 	author={Hsu, Chih-Wei and Chang, Chih-Chung and Lin, Chih-Jen and others},
-	year={2003}
+	year={2003},
+	organization={Tech. rep. Department of Computer Science, National Taiwan University}
+	
 }
 
 @misc{machine_learning,
@@ -638,9 +625,9 @@ organization={IEEE}
 }
 
 @book{MATLAB:2010,
-	year = {2010},
+	year = {2016},
 	author = {MATLAB},
-	title = {version 7.10.0 (R2010a)},
+	title = {version 9.0.0 (R2016a)},
 	publisher = {The MathWorks Inc.},
 	address = {Natick, Massachusetts}
 }
